--- a/index.html
+++ b/index.html
@@ -1,84 +1,93 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="resources/style.css" rel="stylesheet"/>
     <title>Tea Cozy</title>
   </head>
   <body>
 <!-- Header -->
-    <div class="header">
-      <div class="logo">
+
+    <header>
+    <div class="top">
         <img src="./resources/images/logo.png">
       </div>
       <nav>
-        <span><a href="#">Mission</a></span>
-        <span><a href="#">Featured Tea</a></span>
-        <span><a href="#">Locations</a></span>
+        <a href="#">Mission</a>
+        <a href="#">Featured Tea</a>
+        <a href="#">Locations</a>
       </nav>
-    </div>
+    </header>
 
 <!-- Image Text -->
 
-    <div class="mission">
+    <div id="mission">
+      <div class="info">
       <h2>Our Mission</h2>
-      <p>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade,
-        Organic Tea </p>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade,
+        Organic Tea </h4>
+        </div>
       </div>
 
 <!-- Tea of the Month -->
 
-    <div class="tea">
+    <div id="tea">
       <h2>Tea of the Month</h2>
-      <div class="berry">
+      <div class="images">
+        <div class="menu">
         <img src="./resources/images/berryblitz.jpg">
         <a>Fall Berry Blitz Tea</a>
       </div>
-      <div class="spicedrum">
+      <div class="menu">
         <img src="./resources/images/spicedrum.jpg">
         <a>Spiced Rum Tea</a>
       </div>
-      <div class="donut">
+      <div class="menu">
         <img src="./resources/images/donut.jpg">
         <a>Seasonal Donuts</a>
       </div>
-      <div class="myrtle">
+      <div class="menu">
         <img src="./resources/images/myrtle.jpg">
         <a>Myrtle Ave Tea</a>
       </div>
-      <div class="bedford">
+      <div class="menu">
         <img src="./resources/images/bedford.jpg">
         <a>Bedford Bizarre Tea</a>
       </div>
     </div>
+  </div>
+
 
 <!-- Locations -->
 
-    <div class="locations">
+    <div id="locations">
       <h2>Locations</h2>
+      <div class="locations2">
       <div class="downtown">
         <h3>Downtown</h3>
-        <a>384 West 4th St</a><br />
-        <a>Suite 108</a><br />
-        <a>Portland, Maine</a><br />
+        <a>384 West 4th St</a>
+        <a>Suite 108</a>
+        <a>Portland, Maine</a>
       </div>
 
     <div class="east">
       <h3>East Bayside</h3>
-      <a>3433 Phisherman's Avenue</a><br />
-      <a>(Northwest Corner)</a><br />
-      <a>Portland, Maine</a><br />
+      <a>3433 Phisherman's Avenue</a>
+      <a>(Northwest Corner)</a>
+      <a>Portland, Maine</a>
     </div>
 
     <div class="oakdale">
       <h3>Oakdale</h3>
-      <a>515 Crescent Avenue</a><br />
-      <a>Second Floor</a><br />
-      <a>Portland, Maine</a><br />
+      <a>515 Crescent Avenue</a>
+      <a>Second Floor</a>
+      <a>Portland, Maine</a>
     </div>
   </div>
+</div>
+
 
 <!-- FOOTER -->
 
-    <div class="footer">
       <div class="contact">
       <h2>Tea Cozy</h2>
       <h5>contact@theteacozy.com</h5>
@@ -89,8 +98,7 @@
     <div class="copyright">
       <p>copyright The Tea cozy 2017</p>
     </div>
-  </div>
-        
+
 
   </body>
 </html>
